Upgraded dependencies; Federation now optional